--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-client",
-  "version": "0.1.53",
+  "version": "0.1.57",
   "description": "s4a central",
   "license": "MIT",
   "private": true,
@@ -28,7 +28,7 @@
     "stylus-loader": "^3.0.1",
     "vue-highlight-component": "^1.0.0",
     "vue-i18n": "^7.3.0",
-    "vue-moment": "^3.x.x",
+    "vue-moment": "^4.0.0-0",
     "vuetify": "^1.x.x"
   },
   "devDependencies": {}
