--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-client",
-  "version": "0.2.120",
+  "version": "0.2.151",
   "description": "s4a central",
   "license": "MIT",
   "private": true,
@@ -20,15 +20,26 @@
     "prodenv": "yarn build && yarn start"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.x.x",
-    "highlight.js": "^9.12.0",
-    "nuxt": "^2.x.x",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "@nuxtjs/axios": "^5.3.6",
+    "cron-parser": "^2.7.3",
+    "highlight.js": "^9.13.1",
+    "nuxt": "^2.3.4",
     "vue-highlight-component": "^1.0.0",
-    "vue-i18n": "^8.0.0",
-    "vue-moment": "^4.0.0-0",
-    "vuetify": "^1.x.x"
+    "vue-i18n": "^8.5.0",
+    "vue-moment": "^4.0.0",
+    "vuetify": "^1.3.15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
+  }
 }
