--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-lb_server",
-  "version": "0.2.120",
+  "version": "0.2.151",
   "description": "s4a central loopback server",
   "license": "MIT",
   "private": true,
@@ -15,7 +15,7 @@
     "dev": "nodemon server/server.js",
     "testenv": "yarn dev",
     "prodenv": "yarn start",
-    "posttest": "npm run lint && nsp check"
+    "posttest": "npm run lint && npm audit"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -23,27 +23,32 @@
     "chalk": "^2.4.1",
     "checksum": "^0.1.1",
     "compression": "^1.7.3",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.5.2",
-    "helmet": "^3.13.0",
+    "cors": "^2.8.5",
+    "cron-parser": "^2.7.3",
+    "helmet": "^3.15.0",
     "i18n-node": "^2.1.5",
-    "line-by-line": "^0.1.5",
-    "loopback": "^3.21.0",
-    "loopback-boot": "^2.0.0",
-    "loopback-cli": "^5.0.0",
-    "loopback-connector-mongodb": "^3.5.0",
-    "moment": "^2.22.2",
+    "line-by-line": "^0.1.6",
+    "loopback": "^3.24.0",
+    "loopback-boot": "^2.27.1",
+    "loopback-connector-mongodb": "^3.9.2",
+    "moment": "^2.23.0",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
-    "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^3.0.0",
-    "tar": "^4.0.1",
+    "strong-error-handler": "^3.2.0",
+    "tar": "^4.4.8",
     "walkdir": "^0.0.12"
   },
   "devDependencies": {
-    "eslint": "^5.1.0",
-    "eslint-config-loopback": "^12.0.0",
-    "loopback-component-explorer": "^6.2.0",
-    "nodemon": "^1.18.3"
+    "eslint": "^5.10.0",
+    "eslint-config-loopback": "^13.0.0",
+    "loopback-cli": "^5.0.0",
+    "loopback-component-explorer": "^6.3.1",
+    "nodemon": "^1.18.9"
+  },
+  "resolutions": {
+    "i18n-node/mustache": "^3.0.1",
+    "bunyan-mongodb-logger/mongodb": "^3.1.10",
+    "nodemailer": "^4.7.0"
   },
   "repository": {
     "type": "",
