--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-client",
-  "version": "0.2.157",
+  "version": "0.2.178",
   "description": "s4a central",
   "license": "MIT",
   "private": true,
@@ -20,26 +20,28 @@
     "prodenv": "yarn build && yarn start"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "cron-parser": "^2.7.3",
-    "highlight.js": "^9.13.1",
-    "nuxt": "^2.3.4",
-    "vue-highlight-component": "^1.0.0",
-    "vue-i18n": "^8.5.0",
-    "vue-moment": "^4.0.0",
-    "vuetify": "^1.3.15"
+    "@nuxtjs/axios": "5.9.3",
+    "cron-parser": "2.13.0",
+    "highlight.js": "9.17.1",
+    "material-design-icons-iconfont": "5.0.1",
+    "nuxt": "2.11.0",
+    "typeface-roboto": "0.0.75",
+    "vue-highlight-component": "1.0.0",
+    "vue-i18n": "8.15.3",
+    "vue-moment": "4.1.0",
+    "vuetify": "1.5.22"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^5.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "babel-eslint": "10.0.3",
+    "eslint": "6.8.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-html": "6.0.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-node": "11.0.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "stylus": "0.54.7",
+    "stylus-loader": "3.0.2"
   }
 }
