--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-lb_server",
-  "version": "0.2.157",
+  "version": "0.2.178",
   "description": "s4a central loopback server",
   "license": "MIT",
   "private": true,
@@ -18,37 +18,37 @@
     "posttest": "npm run lint && npm audit"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "bunyan-mongodb-logger": "^0.0.2",
-    "chalk": "^2.4.1",
-    "checksum": "^0.1.1",
-    "compression": "^1.7.3",
-    "cors": "^2.8.5",
-    "cron-parser": "^2.7.3",
-    "helmet": "^3.15.0",
-    "i18n-node": "^2.1.5",
-    "line-by-line": "^0.1.6",
-    "loopback": "^3.24.0",
-    "loopback-boot": "^2.27.1",
-    "loopback-connector-mongodb": "^3.9.2",
-    "moment": "^2.23.0",
-    "nodemailer": "^4.7.0",
-    "passport": "^0.4.0",
-    "strong-error-handler": "^3.2.0",
-    "tar": "^4.4.8",
-    "walkdir": "^0.0.12"
+    "axios": "0.19.1",
+    "bunyan-mongodb-logger": "1.0.0",
+    "chalk": "3.0.0",
+    "checksum": "0.1.1",
+    "compression": "1.7.4",
+    "cors": "2.8.5",
+    "cron-parser": "2.13.0",
+    "helmet": "3.21.2",
+    "i18n-node": "2.1.5",
+    "line-by-line": "0.1.6",
+    "loopback": "3.26.0",
+    "loopback-boot": "3.3.1",
+    "loopback-connector-mongodb": "5.2.1",
+    "moment": "2.24.0",
+    "mongodb": "3.4.1",
+    "mustache": "3.2.1",
+    "nodemailer": "6.4.2",
+    "passport": "0.4.1",
+    "strong-error-handler": "3.4.0",
+    "tar": "5.0.5",
+    "walkdir": "0.4.1"
   },
   "devDependencies": {
-    "eslint": "^5.10.0",
-    "eslint-config-loopback": "^13.0.0",
-    "loopback-cli": "^5.0.0",
-    "loopback-component-explorer": "^6.3.1",
-    "nodemon": "^1.18.9"
+    "eslint": "6.8.0",
+    "eslint-config-loopback": "13.1.0",
+    "nodemon": "2.0.2"
   },
   "resolutions": {
-    "i18n-node/mustache": "^3.0.1",
-    "bunyan-mongodb-logger/mongodb": "^3.1.10",
-    "nodemailer": "^4.7.0"
+    "i18n-node/mustache": "3.2.1",
+    "bunyan-mongodb-logger/mongodb": "3.4.1",
+    "nodemailer": "6.4.2"
   },
   "repository": {
     "type": "",
