--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-client",
-  "version": "0.2.178",
+  "version": "0.2.181",
   "description": "s4a central",
   "license": "MIT",
   "private": true,
@@ -22,7 +22,7 @@
   "dependencies": {
     "@nuxtjs/axios": "5.9.3",
     "cron-parser": "2.13.0",
-    "highlight.js": "9.17.1",
+    "highlight.js": "^9.18.0",
     "material-design-icons-iconfont": "5.0.1",
     "nuxt": "2.11.0",
     "typeface-roboto": "0.0.75",
