--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "s4a-central-lb_server",
-  "version": "0.2.181",
+  "version": "0.2.187",
   "description": "s4a central loopback server",
   "license": "MIT",
   "private": true,
@@ -20,35 +20,36 @@
   "dependencies": {
     "axios": "0.19.2",
     "bunyan-mongodb-logger": "1.0.0",
-    "chalk": "3.0.0",
+    "chalk": "4.0.0",
     "checksum": "0.1.1",
     "compression": "1.7.4",
     "cors": "2.8.5",
-    "cron-parser": "2.13.0",
-    "helmet": "3.21.2",
+    "cron-parser": "2.15.0",
+    "helmet": "3.22.0",
     "i18n-node": "2.1.5",
     "line-by-line": "0.1.6",
-    "loopback": "3.26.0",
+    "loopback": "3.27.0",
     "loopback-boot": "3.3.1",
-    "loopback-connector-mongodb": "5.2.1",
-    "moment": "2.24.0",
-    "mongodb": "3.5.2",
-    "mustache": "4.0.0",
-    "nodemailer": "6.4.2",
+    "loopback-connector-mongodb": "5.2.3",
+    "moment": "2.26.0",
+    "mongodb": "3.5.8",
+    "mustache": "4.0.1",
+    "nodemailer": "6.4.8",
     "passport": "0.4.1",
+    "shelljs": "0.8.4",
     "strong-error-handler": "3.4.0",
-    "tar": "5.0.5",
+    "tar": "6.0.2",
     "walkdir": "0.4.1"
   },
   "devDependencies": {
-    "eslint": "6.8.0",
+    "eslint": "7.2.0",
     "eslint-config-loopback": "13.1.0",
-    "nodemon": "2.0.2"
+    "nodemon": "2.0.4"
   },
   "resolutions": {
-    "i18n-node/mustache": "4.0.0",
-    "bunyan-mongodb-logger/mongodb": "3.5.2",
-    "nodemailer": "6.4.2"
+    "i18n-node/mustache": "4.0.1",
+    "bunyan-mongodb-logger/mongodb": "3.5.8",
+    "nodemailer": "6.4.8"
   },
   "repository": {
     "type": "",
