--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "posttest": "npm run lint && npm audit"
   },
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "0.22.0",
     "bunyan-mongodb-logger": "1.0.0",
     "chalk": "4.1.0",
     "checksum": "0.1.1",
@@ -34,11 +34,12 @@
     "moment": "2.29.1",
     "mongodb": "3.6.3",
     "mustache": "4.1.0",
-    "nodemailer": "6.4.17",
+    "nodemailer": "6.6.5",
     "passport": "0.4.1",
     "shelljs": "0.8.4",
+    "shell-escape": "0.2.0",
     "strong-error-handler": "4.0.0",
-    "tar": "6.0.5",
+    "tar": "6.1.11",
     "walkdir": "0.4.1"
   },
   "devDependencies": {
